trigger/main/default/objects/Case_Report__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Case Reports</relationshipLabel>
    <relationshipName>Case_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>