trigger/main/default/objects/Case_Report__c/fields/Case_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Case_Ref_No__c</fullName>
    <label>Case Ref No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>