trigger/main/default/objects/Case_Report__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytical</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Informational</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>